@@ -1,3 +1,10 @@
+Sun Nov 22 17:07:03 1998  Tim Janik  <timj@gtk.org>
+
+	* glib.h:
+	* gslist.c: new function g_slist_copy() to duplicate a list with all its
+	data pointers.
+	* glist.c: new function g_list_copy.
+
 Sat Nov 21 14:57:39 CST 1998 Shawn T. Amundson <amundson@gtk.org>
 
 	* INSTALL:
@@ -9,6 +16,7 @@ Sat Nov 21 14:57:39 CST 1998 Shawn T. Amundson <amundson@gtk.org>
 	* Released GLib 1.1.5
 
 Wed Nov 18 1998 Elliot Lee <sopwith@redhat.com>
+
 	* gdataset.c: There was a code path into g_data_set_internal
 	  through a function (g_datalist_id_set_full). Neither function
 	  checked for g_dataset_init having been run, but
